<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Webfauna</string>
    <string-array name="menu_array">
        <item>Add</item>
        <item>Observations</item>
        <item>Offline Map</item>
        <item>Preferences</item>
        <item>About</item>
    </string-array>
    <string name="access_menu_drawer_open">Open navigation drawer</string>
    <string name="access_menu_drawer_close">Close navigation drawer</string>

    <string name="retry">retry</string>
    <string name="save">Save</string>
    <string name="remove">Remove</string>
    <string name="upload">Upload</string>
    <string name="settings">Settings</string>
    <string name="name">Name</string>

    <string name="selectAll">select all</string>
    <string name="deselectAll">deselect all</string>

    <!--GPS-->
    <string name="gps_disabled_dialog_title">GPS is disabled</string>
    <string name="gps_disabled_dialog_message">GPS is not enabled. Do you want to go to settings menu?</string>

    <string name="coordinate_field_ch03">CH03</string>
    <string name="coordinate_field_wgs">WGS84</string>

    <!-- Observation -->
    <string name="observation_download_progress_dialog_title">Updating..</string>
    <string name="observation_download_progress_dialog_message">Updating webfauna data..</string>

    <string name="observation_cancel_areyousure_dialog_title">Dismiss changes?</string>
    <string name="observation_cancel_areyousure_dialog_positive_button">Yes</string>
    <string name="observation_cancel_areyousure_dialog_negative_button">No</string>

    <string name="observation_validation_dialog_title">Observation invalid</string>


    <string name="observation_date_section_title">Date</string>
    <string name="observation_date_title">Date</string>

    <string name="observation_location_section_title">Location</string>
    <string name="observation_location_title">Location</string>

    <string name="observation_files_section_title">Files</string>
    <string name="observation_images_title">Images</string>

    <string name="observation_species_section_title">Species</string>
    <string name="observation_group_title">Group</string>
    <string name="observation_species_title">Species</string>
    <string name="observation_observation_method_title">Observation Method</string>
    <string name="observation_abundance_title">Abundance</string>

    <string name="observation_environment_section_title">Environment</string>
    <string name="observation_environment_title">Environment</string>
    <string name="observation_milieu_title">Milieu</string>
    <string name="observation_structure_title">Structure</string>
    <string name="observation_substrat_title">Substrat</string>

    <string name="location_dialog_title">Location</string>
    <string name="location_lieudit_title">Lieudit</string>
    <string name="location_coordinates_title">Coordinates</string>
    <string name="location_precision_title">Precision</string>
    <string name="location_altitude_title">Altitude (m)</string>

    <string name="files_dialog_title">Files</string>

    <string name="location_validation_precision_null">precision is mandatory</string>
    <string name="location_validation_lieudit_null">lieudit is mandatory</string>
    <string name="location_validation_lieudit_tolong">lieudit to long (max. 60 characters)</string>
    <string name="location_validation_altitude_invalid">altitude must be at least 0m and lower than 5000m </string>
    <string name="location_validation_coordinates_null">coordinates are mandatory</string>

    <string name="observation_validation_date_null">date is mandatory</string>
    <string name="observation_validation_date_invalid">date has to be between 1900 and the present</string>
    <string name="observation_validation_location_null">location is mandatory</string>
    <string name="observation_validation_group_null">group is mandatory</string>
    <string name="observation_validation_species_null">species is mandatory</string>
    <string name="observation_validation_identificationmethod_null">identification method is mandatory</string>

    <string name="abundance_dialog_title">Abundance</string>
    <string name="abundance_individuals_title">Individuals</string>
    <string name="abundance_males_title"># of Males</string>
    <string name="abundance_females_title"># of Females</string>
    <string name="abundance_eggs_title"># of Eggs</string>
    <string name="abundance_larves_title"># of Larves</string>
    <string name="abundance_youngs_title"># of Youngs</string>
    <string name="abundance_nymphs_title"># of Nymphs</string>
    <string name="abundance_subadults_title"># of Subadults</string>
    <string name="abundance_couples_title"># of Couples</string>

    <!--Observation list-->
    <string name="observation_list_areyousure_delete_dialog_message">Delete the selected Observations?</string>
    <string name="observation_list_areyousure_dialog_positive_button">Yes</string>
    <string name="observation_list_areyousure_dialog_negative_button">No</string>

    <string name="observation_list_upload_progress_dialog_title">Uploading..</string>
    <string name="observation_list_upload_progress_dialog_message">Uploading Observations..</string>
    <string name="observation_list_upload_error_dialog_message">The remaining observations couln\'t be uploaded, please retry!</string>
    <string name="observation_list_offline_alert_dialog_message">Cannot upload Observation, device is offline</string>
    <string name="observation_list_online_observation_dialog_title">!!!!</string>
    <string name="observation_list_online_observation_dialog_message">!!!!</string>

    <!--Preferenes-->
    <string name="prefenrences_login_field_title">Login</string>
    <string name="prefenrences_locale_field_title">Language</string>

    <!--Login dialog-->
    <string name="login_dialog_title">Login</string>
    <string name="login_dialog_email_field_title">Email</string>
    <string name="login_dialog_password_field_title">Password</string>
    <string name="login_dialog_btnlogin_title">Login</string>
    <string name="login_dialog_btnlogout_title">Logout</string>
    <string name="login_dialog_progress_dialog_title">Login</string>
    <string name="login_dialog_progress_dialog_message">Logging in...</string>
    <string name="login_dialog_error_dialog_message">Couldn\'t Log in, are your credentials correct?</string>

    <!--Files dialog-->
    <string name="files_dialog_btnadd_title">Add</string>
    <string name="files_error_dialog_message">Could not add Image, please try again!</string>


    <!--offline mode dialog-->
    <string name="offline_mode_dialog_message">Webfauna is in offline mode, apart from uploading Observations, you can use the app normally.</string>


    <!--about-->
    <string name="about_version">Version: 1.2 - 31.07.2014</string>
    <string name="about_description">Webfauna is an online data entry web server for fauna records within Switzerland and from bordering regions. All Swiss fauna is concerned except for birds.
        Webfauna is the platform of the Swiss Biological Records Center (CSCF) and the Swiss Amphibians and Reptiles Conservation Program (KARCH)</string>
    <string name="about_address">Passage Maximilien-de-Meuron 6, CH-2000 Neuchâtel (Suisse)</string>
    <string name="about_email">secretariat.cscf@unine.ch</string>
    <string name="about_website">http://www.cscf.ch</string>
    <string name="about_copyright">Copyright CSCF 2014</string>

    <!--offline map-->
    <string name="clear_offline_map_sections_message">Clear map cache?</string>
    <string name="offline_map_progress_title">Downloading Tiles...</string>
    <string name="offline_map_progress_message">This can take several minutes. Remaining Tiles: </string>
    <string name="offline_map_retry_dialog_message">Try again?</string>
    <string name="offline_map_to_much_squares">You can not cache more then 5 squares at the same time!</string>
    <string name="offline_map_number_of_tiles">The download can take up to 100MB, are you sure?</string>
</resources>